agregue endpoints de imagenes pero aun faltan algunos
